packages/rust/crates/xiuxian-qianji/tests/unit/bin/qianji/lint/bpmn_dmn/snapshots/qianji__tests__lint__bpmn_dmn__cases_08__qianji_lint_compact_malformed_native_closing_tag_patch.snap
---
source: packages/rust/crates/xiuxian-qianji/src/bin/../../tests/unit/bin/qianji/lint/bpmn_dmn/cases_08.rs
expression: "stable_temp_output(&output.rendered, &temp_dir)"
---
[lint:error] $TEMP/malformed_native_closing_tag.bpmn bpmn
Source: $TEMP/malformed_native_closing_tag.bpmn
Issues: 1

[bpmn.invalid_xml] Error: BPMN XML is not well-formed
   ,-[ $TEMP/malformed_native_closing_tag.bpmn:6:58 ]
 6 |      <bpmn:documentation>Are any of these happening now?</bpmn:doc>
   |                                                         `----------- repair malformed XML near this token
   |Help: Fix tag spelling, namespace prefix spelling, closing tags, attribute quotes, or nesting. Do not escape real BPMN element tags.

Action:
- Repair the XML syntax in BPMN source '$TEMP/malformed_native_closing_tag.bpmn' so it becomes well-formed without changing workflow intent. Preserve existing BPMN ids and task semantics while fixing broken tags, attribute quoting, or nesting.

Fix:
- Repair the XML structure first: close open tags, fix broken attribute quotes, and remove overlapping elements.
- Keep BPMN element names and ids stable while fixing XML syntax so workflow semantics do not drift.

Patch focus:
- repair_xml_tag_or_nesting
- target: parser offset token

Forbidden forms:
- escaping real BPMN elements such as &lt;extensionElements&gt;
- changing existing BPMN ids while repairing XML syntax

Structured repair:
- strategy: repair_malformed_xml_token
- contract: bpmn.native.xml.well_formed.v1
