packages/rust/crates/xiuxian-qianji/tests/unit/bin/qianji/lint/bpmn_dmn/snapshots/qianji__tests__lint__bpmn_dmn__cases_08__qianji_lint_compact_malformed_qianji_closing_tag_patch.snap
---
source: packages/rust/crates/xiuxian-qianji/src/bin/../../tests/unit/bin/qianji/lint/bpmn_dmn/cases_08.rs
expression: "stable_temp_output(&output.rendered, &temp_dir)"
---
[lint:error] $TEMP/malformed_qianji_closing_tag.bpmn bpmn
Source: $TEMP/malformed_qianji_closing_tag.bpmn
Issues: 1

[bpmn.invalid_xml] Error: BPMN XML is not well-formed
    ,-[ $TEMP/malformed_qianji_closing_tag.bpmn:12:61 ]
 12 |            <qianji:question>Are any of these happening now?</qian:question>
    |                                                            `---------------- repair malformed XML near this token
    |Help: Fix tag spelling, namespace prefix spelling, closing tags, attribute quotes, or nesting. Do not escape real BPMN/qianji element tags.
    |Contract: qianji.bpmn.xml.well_formed.v1 requires opening and closing XML element names to match exactly.

Proposed patch:
```diff
--- $TEMP/malformed_qianji_closing_tag.bpmn
+++ $TEMP/malformed_qianji_closing_tag.bpmn
@@ -12,1 +12,1 @@
-            <qianji:question>Are any of these happening now?</qian:question>
+            <qianji:question>Are any of these happening now?</qianji:question>
```

Return unified diff only.
