packages/rust/crates/xiuxian-qianji/tests/unit/bin/qianji/lint/bpmn_dmn/snapshots/qianji__tests__lint__bpmn_dmn__cases_08__qianji_lint_compact_unescaped_xml_placeholder_repair.snap
---
source: packages/rust/crates/xiuxian-qianji/src/bin/../../tests/unit/bin/qianji/lint/bpmn_dmn/cases_08.rs
expression: "stable_temp_output(&output.rendered, &temp_dir)"
---
[lint:error] $TEMP/invalid_prompt_placeholder.bpmn bpmn
Source: $TEMP/invalid_prompt_placeholder.bpmn
Issues: 1

[bpmn.invalid_xml] Error: BPMN XML is not well-formed
   ,-[ $TEMP/invalid_prompt_placeholder.bpmn:6:65 ]
 6 |      <bpmn:documentation>Write a design doc to docs/YYYY-MM-DD-<topic>-design.md</bpmn:documentation>
   |                                                                `------- escape raw XML-like placeholder `<topic>` in text
   |Help: Replace `<topic>` with `&lt;topic&gt;` inside prompt/question text, or wrap literal examples in CDATA. Preserve BPMN ids.

Action:
- Repair the XML syntax in BPMN source '$TEMP/invalid_prompt_placeholder.bpmn' so it becomes well-formed without changing workflow intent. Preserve existing BPMN ids and task semantics while fixing broken tags, attribute quoting, or nesting.

Fix:
- Repair the XML structure first: close open tags, fix broken attribute quotes, and remove overlapping elements.
- Keep BPMN element names and ids stable while fixing XML syntax so workflow semantics do not drift.

Patch focus:
- escape_text_node_placeholder
- target: <topic>

Examples:
- &lt;topic&gt;
- <![CDATA[<topic>]]>

Forbidden forms:
- <topic>

Structured repair:
- strategy: escape_unescaped_xml_text_placeholder
- contract: bpmn.native.xml.well_formed.v1
